# codie-discord

./: .gitignore  Cargo.toml  README.md
src/: bot.rs  code.rs  db.rs  discord.rs  lang.rs  logging.rs  main.rs  options_parser.rs  runner.rs
website/: .gitignore  config.toml
website/templates/: base.html  footer.html  index.html  navbar.html
