[package]
name = "codie-discord"
version = "0.1.0"
authors = ["Eli W. Hunter <elihunter173@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1"
env_logger = "0.8"
futures = "0.3"
futures-util = "0.3"
inventory = "0.1"
log = "0.4"
nom = "6"
once_cell = "1.5"
regex = "1"
serde = "1"
toml = "0.5"
sled = "0.34"
tempfile = "3"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
unicase = "2.6"

[dependencies.serenity]
version = "0.10"
default-features = false
features = [
    "builder",
    "cache",
    "client",
    "gateway",
    "model",
    "rustls_backend",
]

[dependencies.shiplift]
version = "0.7.0"
default-features = false
features = ["unix-socket", "chrono"]

[dev-dependencies]
# Make test case generation easier
paste = "1"
