[package]
name = "codie-discord"
version = "0.1.0"
authors = ["Eli W. Hunter <elihunter173@gmail.com>"]
edition = "2021"

[dependencies]
anyhow = "1.0.57"
futures = "0.3.21"
futures-util = "0.3.21"
inventory = "0.2.3"
nom = "7.1.1"
once_cell = "1.12.0"
regex = "1.5.6"
serde = "1.0.137"
toml = "0.5.9"
sled = "0.34.7"
tempfile = "3.3.0"
thiserror = "1.0.31"
tokio = { version = "1.19.2", features = ["full"] }
unicase = "2.6.0"

tracing = "0.1.35"
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }

[dependencies.shiplift]
version = "0.7.0"
default-features = false
features = ["unix-socket", "chrono"]

# We disable the `framework` feature
[dependencies.serenity]
version = "0.10.10"
default-features = false
features = [
    "builder",
    "cache",
    "client",
    "gateway",
    "model",
    "rustls_backend",
]

[dev-dependencies]
# Make test case generation easier
paste = "1.0.7"
